--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!-- Quiz View -->
       <!-- Note: this view is shown initially and for each question -->
       <div id="quizView" class="view">
-        <div id="progress">
+        <div class="progress">
           <div id="progressBar"></div>
         </div>
         <div id="questionCount"></div>
@@ -25,6 +25,9 @@
         </div>
         <div id="timeRemaining">Remaining Time: <span>00:00</span></div>
         <button id="nextButton" class="button-primary">Answer</button>
+        <div class="progress">
+          <div id="timerBar"></div>
+        </div>
       </div>
 
       <!-- End Quiz View -->
